2023-11-20T08:13:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6927245823 # 2094
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-20
* notice: last 14d: unq all: 51 85
* notice: prev accum: outdated-unq outdated-all / unq all: 1909 5696 / 1962 5772
* notice: next accum: outdated-unq outdated-all / unq all: 1909 5696 / 1971 5782
* notice: prev exec diff / last date diff / accum: unq all: +9 +10 -0 -1 / +9 +10 -0 -0 / 9 10
* notice: removed / changed dates: [] / [2023-11-06 2023-11-20]

2023-11-19T16:11:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6921574781 # 2092
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-19
* notice: last 14d: unq all: 44 76
* notice: prev accum: outdated-unq outdated-all / unq all: 1908 5694 / 1962 5771
* notice: next accum: outdated-unq outdated-all / unq all: 1909 5696 / 1962 5772
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-11-05] / [2023-11-19]

2023-11-19T08:11:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6919288077 # 2091
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-19
* notice: last 14d: unq all: 44 76
* notice: prev accum: outdated-unq outdated-all / unq all: 1908 5694 / 1961 5770
* notice: next accum: outdated-unq outdated-all / unq all: 1908 5694 / 1962 5771
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-11-05 2023-11-19]

2023-11-18T16:11:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6914969714 # 2089