@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-20T08:13:42Z",
-  "count" : 10,
-  "count_minmax" : [ 10, 10 ],
-  "count_decinc" : [ -0, +10 ],
-  "uniques" : 9,
-  "uniques_minmax" : [ 9, 9 ],
-  "uniques_decinc" : [ -0, +9 ]
+  "timestamp" : "2023-11-20T16:13:24Z",
+  "count" : 11,
+  "count_minmax" : [ 10, 11 ],
+  "count_decinc" : [ -0, +11 ],
+  "uniques" : 10,
+  "uniques_minmax" : [ 9, 10 ],
+  "uniques_decinc" : [ -0, +10 ]
 }
