@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-20T08:13:42Z",
-  "count_outdated" : 5696,
-  "uniques_outdated" : 1909,
-  "count" : 5782,
-  "uniques" : 1971,
+  "timestamp" : "2023-11-20T16:13:24Z",
+  "count_outdated" : 5698,
+  "uniques_outdated" : 1910,
+  "count" : 5783,
+  "uniques" : 1972,
   "clones" : [
-    {
-      "timestamp": "2023-11-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-11-07T00:00:00Z",
       "count": 29,
@@ -106,12 +97,12 @@
     },
     {
       "timestamp": "2023-11-20T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 10, 10 ],
-      "count_decinc": [ 0, 10 ],
-      "uniques": 9,
-      "uniques_minmax": [ 9, 9 ],
-      "uniques_decinc": [ 0, 9 ]
+      "count": 11,
+      "count_minmax": [ 10, 11 ],
+      "count_decinc": [ 0, 11 ],
+      "uniques": 10,
+      "uniques_minmax": [ 9, 10 ],
+      "uniques_decinc": [ 0, 10 ]
     }
   ]
 }
