@@ -3,11 +3,6 @@
   "uniques": 51,
   "clones": [
     {
-      "timestamp": "2023-11-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-11-07T00:00:00Z",
       "count": 29,
       "uniques": 21
@@ -59,8 +54,8 @@
     },
     {
       "timestamp": "2023-11-20T00:00:00Z",
-      "count": 10,
-      "uniques": 9
+      "count": 11,
+      "uniques": 10
     }
   ]
 }
