@@ -1,3 +1,12 @@
+2023-11-20T16:13:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6932785049 # 2095
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-20
+* notice: last 14d: unq all: 51 85
+* notice: prev accum: outdated-unq outdated-all / unq all: 1909 5696 / 1971 5782
+* notice: next accum: outdated-unq outdated-all / unq all: 1910 5698 / 1972 5783
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +10 +11 -0 -0 / 10 11
+* notice: removed / changed dates: [2023-11-06] / [2023-11-20]
+
 2023-11-20T08:13:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6927245823 # 2094
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-20
